Phase 22 logging migration and platform cleanup